# misc

./: .gitignore  CMakeLists.txt  main.cc  version.hh.in
asm/: add_3.s  add_year.s  alloc.s  error_exit.s  hello_lib.s  ltu_st.s  maximum.s  power.s  read_record.s  read_records.s  write_records.s
config/: asm.lang  asm.xml  asm_intel.lang  c.lang  cpp.lang  cpphdr.lang  dark.vim  dark.xml  java.lang  settings.json  sh.lang
include/: log.hh  misc.hh  rc.hh  util.hh  version.hh
log/: CMakeLists.txt  log.cc
script/: myscript.sh
src/: 0.cc  CMakeLists.txt  misc.cc  text_stat.cc
src/asm/: count_chars.s  factorial.s  hello.s  int_to_str.s  linux.s  ltu.s  ltu_buff.s  printf_example.s  str_to_int.s  write_newline.s  write_record.s
test/: CMakeLists.txt  test.cc  test_log.cc  test_util.cc  test_version.cc
util/: CMakeLists.txt  util.cc
